Creating a maze using DFS with recursion

--- a/Toy1_Maze.vcxproj
+++ b/Toy1_Maze.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="MazeUI.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Maze.cpp" />
     <ClCompile Include="MazeEditor.cpp" />
     <ClCompile Include="MazeUI.cpp" />
